better fix by only fixing overflow on container div

--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 3em;
-    overflow-x: hidden;
 }
 
 header {
@@ -66,7 +65,6 @@ header {
     gap: 1em;
     position: relative;
     padding-top: 2rem;
-    overflow-x: hidden;
 }
 
 header::before {
@@ -96,6 +94,7 @@ header::before {
     width: 80%;
     min-width: 250px;
     box-shadow: grey 2px 2px 4px;
+    overflow-x: hidden;
 }
 
 /*style for header picture and name*/
